tdf#136566 XLSX export: fix lost scheme based line colors

by converting scheme color identifiers to colors temporarily.

Because we haven't exported theme XML yet, we could not import
shapes of these exported documents correctly, resulting missing
lines.

Co-authored-by: Szabolcs Toth

Change-Id: I4f3d19cb8a9a851fb07a97f798195011e420d441
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102722
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>